Add method UserSession#keepAuthorizedComponents()
to be able to fix authorization performance hotspot